Refactored view model and all stetps with success flow

--- a/MercadoPago/Application/View/Step1/Step1.storyboard
+++ b/MercadoPago/Application/View/Step1/Step1.storyboard
@@ -132,4 +132,5 @@
             <point key="canvasLocation" x="1862" y="114"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="1" green="0.58039215690000001" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
 </document>
