--- a/MercadoPago/Application/View/Main/Main.storyboard
+++ b/MercadoPago/Application/View/Main/Main.storyboard
@@ -51,12 +51,24 @@
                                     <constraint firstAttribute="height" constant="80" id="w4M-mN-Ngf"/>
                                 </constraints>
                             </view>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2wF-uG-r8p">
+                                <rect key="frame" x="40" y="180" width="295" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="nAJ-P1-k2u"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="6qk-Ec-0ZB" firstAttribute="trailing" secondItem="EEp-tk-Ir6" secondAttribute="trailing" id="Grh-E4-1Mv"/>
                             <constraint firstItem="EEp-tk-Ir6" firstAttribute="bottom" secondItem="6qk-Ec-0ZB" secondAttribute="bottom" id="LPW-aJ-7Ug"/>
                             <constraint firstItem="EEp-tk-Ir6" firstAttribute="leading" secondItem="6qk-Ec-0ZB" secondAttribute="leading" id="Ord-wt-NLh"/>
+                            <constraint firstItem="6qk-Ec-0ZB" firstAttribute="trailing" secondItem="2wF-uG-r8p" secondAttribute="trailing" constant="40" id="VfN-yX-nE2"/>
+                            <constraint firstItem="2wF-uG-r8p" firstAttribute="leading" secondItem="6qk-Ec-0ZB" secondAttribute="leading" constant="40" id="gGd-Gj-kP8"/>
+                            <constraint firstItem="2wF-uG-r8p" firstAttribute="top" secondItem="6qk-Ec-0ZB" secondAttribute="top" constant="40" id="hhA-q0-Yah"/>
                             <constraint firstItem="pVz-3X-Bgi" firstAttribute="leading" secondItem="Hzp-7M-SEi" secondAttribute="leading" id="oIb-Ov-QcM"/>
                             <constraint firstItem="pVz-3X-Bgi" firstAttribute="top" secondItem="EEp-tk-Ir6" secondAttribute="bottom" id="sfd-Az-hRK"/>
                             <constraint firstAttribute="trailing" secondItem="pVz-3X-Bgi" secondAttribute="trailing" id="vXI-VW-xrs"/>
@@ -100,4 +112,5 @@
             <point key="canvasLocation" x="213.59999999999999" y="113.79310344827587"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="1" green="0.58039215690000001" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
 </document>
