--- a/MercadoPago/Application/View/Step3/Step3.storyboard
+++ b/MercadoPago/Application/View/Step3/Step3.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Banks-->
+        <!--Dues-->
         <scene sceneID="Sri-Z4-qL8">
             <objects>
-                <viewController id="Ogz-su-eAw" customClass="BanksViewController" customModule="MercadoPago" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Ogz-su-eAw" customClass="InstallmentViewController" customModule="MercadoPago" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ggg-zM-SkL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="724"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,39 +22,29 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="630"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BankCell" rowHeight="70" id="bfV-Tg-6Jl" customClass="CreditCardTableViewCell" customModule="MercadoPago" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="94b-Uy-yrr" detailTextLabel="IpR-bl-BQN" rowHeight="70" style="IBUITableViewCellStyleSubtitle" id="bfV-Tg-6Jl" customClass="CreditCardTableViewCell" customModule="MercadoPago" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bfV-Tg-6Jl" id="zHg-hI-YEr">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="69.666666666666671"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TN9-rv-gjg">
-                                                    <rect key="frame" x="16" y="14" width="60" height="40"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="60" id="XKc-KB-uTo"/>
-                                                        <constraint firstAttribute="height" constant="40" id="w36-yU-MB6"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6OH-Zo-DSf">
-                                                    <rect key="frame" x="84" y="24" width="275" height="21"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="94b-Uy-yrr">
+                                                    <rect key="frame" x="15" y="14.999999999999998" width="33.333333333333336" height="20.333333333333332"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IpR-bl-BQN">
+                                                    <rect key="frame" x="14.999999999999996" y="38.333333333333329" width="43.666666666666664" height="14.333333333333334"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="TN9-rv-gjg" firstAttribute="leading" secondItem="zHg-hI-YEr" secondAttribute="leading" constant="16" id="1G1-km-A0f"/>
-                                                <constraint firstItem="6OH-Zo-DSf" firstAttribute="centerY" secondItem="zHg-hI-YEr" secondAttribute="centerY" id="9Q4-dl-cEz"/>
-                                                <constraint firstItem="6OH-Zo-DSf" firstAttribute="leading" secondItem="TN9-rv-gjg" secondAttribute="trailing" constant="8" id="9ge-Vp-d5e"/>
-                                                <constraint firstAttribute="trailing" secondItem="6OH-Zo-DSf" secondAttribute="trailing" constant="16" id="H85-6O-KJT"/>
-                                                <constraint firstItem="TN9-rv-gjg" firstAttribute="centerY" secondItem="zHg-hI-YEr" secondAttribute="centerY" id="tnK-Dk-CbK"/>
-                                            </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="cardImage" destination="TN9-rv-gjg" id="gvG-1M-iEN"/>
-                                            <outlet property="cardNameLabel" destination="6OH-Zo-DSf" id="WT2-2n-vyx"/>
-                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -72,6 +62,9 @@
                                 <state key="normal" title="Next">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="goToHome:" destination="Ogz-su-eAw" eventType="touchUpInside" id="fky-pk-Rla"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uyK-1A-9Si">
                                 <rect key="frame" x="0.0" y="690" width="375" height="80"/>
@@ -108,7 +101,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ptT-Xv-ViZ"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Banks" id="GTa-C4-gLE"/>
+                    <navigationItem key="navigationItem" title="Dues" id="GTa-C4-gLE"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="nextButton" destination="t7Q-RX-VD6" id="Td0-Lc-Bi4"/>
@@ -121,4 +114,5 @@
             <point key="canvasLocation" x="1152.8" y="113.79310344827587"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="1" green="0.58039215690000001" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
 </document>
